Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/vertx.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/vertx.adoc.po
@@ -254,7 +254,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/vertx.adoc:145
 #, no-wrap
 msgid "Name"
-msgstr ""
+msgstr "名前"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/vertx.adoc:145
