--- a/l10n/po/ja_JP/_versions/1.7/guides/vertx.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/vertx.adoc.po
@@ -252,7 +252,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/vertx.adoc:143
 #, no-wrap
 msgid "Name"
-msgstr ""
+msgstr "名前"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/vertx.adoc:143
