--- a/l10n/po/ja_JP/_guides/websockets.adoc.po
+++ b/l10n/po/ja_JP/_guides/websockets.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-06 16:10+0000\n"
-"PO-Revision-Date: 2021-03-07 00:10+0900\n"
+"PO-Revision-Date: 2021-03-23 14:55+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -27,9 +27,8 @@ msgstr "Quarkus - WebSocketsを使用する"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:12
-#, fuzzy
 msgid "This guide explains how your Quarkus application can utilize web sockets to create interactive web applications.  Because it's the _canonical_ web socket application, we are going to create a simple chat application."
-msgstr "このガイドでは、QuarkusアプリケーションがWebSocketを利用してインタラクティブなウェブアプリケーションを作成する方法を説明します。定型 _的な_ WebSocketアプリケーションなので、簡単なチャットアプリケーションを作成します。"
+msgstr "このガイドでは、QuarkusアプリケーションがWebSocketを利用してインタラクティブなウェブアプリケーションを作成する方法を説明します。 _定型的な_ WebSocketアプリケーションなので、簡単なチャットアプリケーションを作成します。"
 
 #. type: Title ==
 #: upstream/_guides/websockets.adoc:13
@@ -75,9 +74,8 @@ msgstr "このガイドでは、WebSocketを使用して、接続されている
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:29
-#, fuzzy
 msgid "image:websocket-guide-architecture.png[alt=Architecture]"
-msgstr "image:websocket-guide-architecture.png[alt=\"Architecture\"]"
+msgstr "image:websocket-guide-architecture.png[alt=Architecture]"
 
 #. type: Title ==
 #: upstream/_guides/websockets.adoc:30
@@ -87,9 +85,8 @@ msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:34
-#, fuzzy
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can skip right to the completed example."
-msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例には右に飛ばしても構いません。"
+msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、すぐに完成した例に飛んでも構いません。"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:36
@@ -98,7 +95,6 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:38
-#, fuzzy
 msgid "The solution is located in the `websockets-quickstart` {quickstarts-tree-url}/websockets-quickstart[directory]."
 msgstr "ソリューションは `websockets-quickstart` {quickstarts-tree-url}/websockets-quickstart[directory] にあります。"
 
@@ -127,13 +123,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:54
-#, fuzzy
 msgid "This command generates the Maven project (without any classes) and import the `undertow-websockets` extension."
 msgstr "このコマンドは、Mavenプロジェクト(クラスなし)を生成し、 `undertow-websockets` エクステンションをインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:57
-#, fuzzy
 msgid "If you already have your Quarkus project configured, you can add the `undertow-websockets` extension to your project by running the following command in your project base directory:"
 msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `undertow-websockets` エクステンションを追加することができます。"
 
@@ -160,15 +154,14 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/websockets.adoc:73
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Handling web sockets"
 msgstr "WebSocketの取り扱い"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:78
-#, fuzzy
 msgid "Our application contains a single class that handles the web sockets.  Create the `org.acme.websockets.ChatSocket` class in the `src/main/java` directory.  Copy the following content into the created file:"
-msgstr "私たちのアプリケーションには、Web ソケットを処理する単一のクラスが含まれています。 `src/main/java` ディレクトリーに `org.acme.websockets.ChatSocket` クラスを作成します。作成したファイルに以下の内容をコピーします。"
+msgstr "このアプリケーションには、Web ソケットを処理するクラスが一つ含まれます。 `src/main/java` ディレクトリーに `org.acme.websockets.ChatSocket` クラスを作成します。作成したファイルに以下の内容をコピーします。"
 
 #. type: delimited block -
 #: upstream/_guides/websockets.adoc:82 upstream/_guides/websockets.adoc:180
@@ -279,25 +272,22 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:137
-#, fuzzy
 msgid "Configures the web socket URL"
 msgstr "WebSocketのURLを設定する"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:138
-#, fuzzy
 msgid "Stores the currently opened web sockets"
 msgstr "現在開いているWebSocketを格納します。"
 
 #. type: Title ==
 #: upstream/_guides/websockets.adoc:139
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "A slick web frontend"
 msgstr "洗練されたWebフロントエンド"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:144
-#, fuzzy
 msgid "All chat applications need a _nice_ UI, well, this one may not be that nice, but does the work.  Quarkus automatically serves static resources contained in the `META-INF/resources` directory.  Create the `src/main/resources/META-INF/resources` directory and copy this {quickstarts-blob-url}/websockets-quickstart/src/main/resources/META-INF/resources/index.html[index.html] file in it."
 msgstr "すべてのチャットアプリケーションには _素敵な_ UIが必要です。Quarkusは、 `META-INF/resources` ディレクトリーに含まれる静的リソースを自動的に提供します。 `src/main/resources/META-INF/resources` ディレクトリーを作成し、この {quickstarts-blob-url}/websockets-quickstart/src/main/resources/META-INF/resources/index.html[index.html] ファイルをコピーします。"
 
@@ -320,21 +310,18 @@ msgstr "./mvnw compile quarkus:dev\n"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:155
-#, fuzzy
 msgid "Then open your 2 browser windows to http://localhost:8080/:"
-msgstr "そして、2つのブラウザのウィンドウを開いて、 http://localhost:8080/"
+msgstr "そして、ブラウザウィンドウを2つ開いて、 http://localhost:8080/ に移動します:"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:157
-#, fuzzy
 msgid "Enter a name in the top text area (use 2 different names)."
 msgstr "上部のテキストエリアに名前を入力します(2種類の名前を使用します)。"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:158
-#, fuzzy
 msgid "Click on connect"
-msgstr "接続をクリック"
+msgstr "connectをクリック"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:159
@@ -343,22 +330,18 @@ msgstr "メッセージの送受信"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:161
-#, fuzzy
 msgid "image:websocket-guide-screenshot.png[alt=Application]"
-msgstr "image:websocket-guide-screenshot.png[alt=\"Application\"]"
+msgstr "image:websocket-guide-screenshot.png[alt=Application]"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:164
-#, fuzzy
-#| msgid "As usual, the application can be packaged using `./mvnw clean package` and executed using the `-runner.jar` file.  You can also build the native executable using `./mvnw package -Pnative`."
 msgid "As usual, the application can be packaged using `./mvnw clean package` and executed using the `target/quarkus-app/quarkus-run.jar` file.  You can also build the native executable using `./mvnw package -Pnative`."
-msgstr "いつものように、 `./mvnw clean package` を使ってアプリケーションをパッケージ化し、 `-runner.jar` ファイルを使って実行することができます。また、 `./mvnw package -Pnative` を使用してネイティブの実行ファイルをビルドすることもできます。"
+msgstr "いつものように、 `./mvnw clean package` を使ってアプリケーションをパッケージ化し、 `target/quarkus-app/quarkus-run.jar` ファイルを使って実行することができます。また、 `./mvnw package -Pnative` を使用してネイティブの実行ファイルをビルドすることもできます。"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:166
-#, fuzzy
 msgid "You can also test your web socket applications using the approach detailed {quickstarts-blob-url}/websockets-quickstart/src/test/java/org/acme/websockets/ChatTest.java[here]."
-msgstr "また、{quickstarts-blob-url}/websockets-quickstart/src/test/java/org/acme/websockets/ChatTest.java[here]の詳細なアプローチを使用して、Webソケットアプリケーションをテストすることもできます。"
+msgstr "また、{quickstarts-blob-url}/websockets-quickstart/src/test/java/org/acme/websockets/ChatTest.java[こちら]で詳細に解説された手法を使用して、Webソケットアプリケーションをテストすることもできます。"
 
 #. type: Title ==
 #: upstream/_guides/websockets.adoc:167
@@ -368,19 +351,16 @@ msgstr "WebSocketクライアント"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:170
-#, fuzzy
 msgid "Quarkus also contains a WebSocket client. You can call `ContainerProvider.getWebSocketContainer().connectToServer` to create a websocket connection."
 msgstr "Quarkusには、WebSocketクライアントも含まれています。 `ContainerProvider.getWebSocketContainer().connectToServer` を呼び出して、Websocket接続を作成することができます。"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:174
-#, fuzzy
 msgid "When you connect to the server you can either pass in the Class of the annotated client endpoint you want to use, or an instance of `javax.websocket.Endpoint`. If you are using the annotated endpoint then you can use the exact same annotations as you can on the server, except it must be annotated with `@ClientEndpoint` instead of `@ServerEndpoint`."
-msgstr "サーバーに接続する際には、使用する注釈付きクライアント・エンドポイントの Class を渡すか、 `javax.websocket.Endpoint` のインスタンスを渡すことができます。注釈付きエンドポイントを使用している場合は、サーバー上で使用できるのとまったく同じ注釈を使用できますが、注釈は `@ServerEndpoint` ではなく `@ClientEndpoint` でなければなりません。"
+msgstr "サーバーに接続する際には、使用するアノテーション付きクライアント・エンドポイントの Class で渡すか、 `javax.websocket.Endpoint` のインスタンスで渡すことができます。アノテーション付きエンドポイントを使用している場合は、サーバー上で使用できるのとまったく同じアノテーションを使用できますが、アノテーションは `@ServerEndpoint` ではなく `@ClientEndpoint` でなければなりません。"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:176
-#, fuzzy
 msgid "The example below shows the client being used to test the chat endpoint above."
 msgstr "以下の例は、上記のチャットエンドポイントをテストするために使用されるクライアントを示しています。"
 
@@ -493,12 +473,11 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/websockets.adoc:234
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "More WebSocket Information"
 msgstr "その他のWebSocket情報"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:237
-#, fuzzy
 msgid "The Quarkus WebSocket implementation is an implementation of link:https://eclipse-ee4j.github.io/websocket-api/[Jakarta Websockets]."
 msgstr "Quarkus WebSocketの実装は、 link:https://eclipse-ee4j.github.io/websocket-api/[Jakarta Websocket] の実装です。"
