--- a/l10n/po/ja_JP/_guides/performance-measure.adoc.po
+++ b/l10n/po/ja_JP/_guides/performance-measure.adoc.po
@@ -402,7 +402,7 @@ msgstr "フォールバックネイティブイメージは、何らかの理由
 #. type: Plain text
 #: upstream/_guides/performance-measure.adoc:180
 msgid "Quarkus disables this feature by setting `-H:FallbackThreshold=0`: this will ensure you get a compilation failure rather risking to not notice that the application is unable to really run in native mode."
-msgstr "Quarkusは、 `-H:FallbackThreshold=0` を設定することでこの機能を無効にします。これにより、アプリケーションが本当にネイティブモードで実行できないことに気づかないリスクの代わりに、コンパイル失敗するように出来ます。"
+msgstr "Quarkusは、 `-H:FallbackThreshold=0` を設定することでこの機能を無効にします。これにより、アプリケーションが本当にネイティブモードで実行できないことに気づかないリスクの代わりに、コンパイルに失敗するように出来ます。"
 
 #. type: Plain text
 #: upstream/_guides/performance-measure.adoc:182
