--- a/l10n/po/ja_JP/_versions/1.11/guides/performance-measure.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/performance-measure.adoc.po
@@ -43,124 +43,124 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:15
 msgid "which additional flags will Quarkus apply to native-image by default"
-msgstr ""
+msgstr "Quarkusがデフォルトでネイティブイメージに適用する追加フラグ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:18
 msgid "All of our tests are run on the same hardware for a given batch.  It goes without saying but it's better when you say it."
-msgstr ""
+msgstr "私たちのテストはすべて、与えられたバッチに対して同じハードウェアで実行されます。言うまでもないことですが、言うべきことです。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/performance-measure.adoc:19
 #, no-wrap
 msgid "How do we measure memory usage"
-msgstr ""
+msgstr "メモリー使用量の測定方法"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:24
 msgid "When measuring the footprint of a Quarkus application, we measure https://en.wikipedia.org/wiki/Resident_set_size[Resident Set Size (RSS)] and not the JVM heap size which is only a small part of the overall problem.  The JVM not only allocates native memory for heap (`-Xms`, `-Xmx`) but also structures required by the jvm to run your application. Depending on the JVM implementation, the total memory allocated for an application will include, but not limited to:"
-msgstr ""
+msgstr "Quarkusアプリケーションのフットプリントを測定する際には、 link:https://en.wikipedia.org/wiki/Resident_set_size[Resident Set Size(RSS)] を測定します。JVMのヒープサイズではありません。JVMヒープサイズは全体的な問題のほんの一部です。JVMは、ヒープ用のネイティブメモリー( `-Xms` , `-Xmx` )を割り当てるだけでなく、アプリケーションを実行するためにjvmが必要とする構造体も割り当てます。JVMの実装に応じて、アプリケーションに割り当てられる総メモリーは、以下のものを含みますが、これに限りません。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:26
 msgid "Heap space"
-msgstr ""
+msgstr "ヒープ空間"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:27
 msgid "Class metadata"
-msgstr ""
+msgstr "クラスメタデータ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:28
 msgid "Thread stacks"
-msgstr ""
+msgstr "スレッドスタック"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:29
 msgid "Compiled code"
-msgstr ""
+msgstr "コンパイルされたコード"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:30
 msgid "Garbage collection"
-msgstr ""
+msgstr "ガベージコレクション"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/performance-measure.adoc:31
 #, no-wrap
 msgid "Native Memory Tracking"
-msgstr ""
+msgstr "ネイティブメモリーのトラッキング"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:34
 msgid "In order to view the native memory used by the JVM, you can enable the https://docs.oracle.com/javase/8/docs/technotes/guides/vm/nmt-8.html[Native Memory Tracking] (NMT) feature in hotspot;"
-msgstr ""
+msgstr "JVMで使用されているネイティブメモリーを表示するには、hotspotでNMT( link:https://docs.oracle.com/javase/8/docs/technotes/guides/vm/nmt-8.html[Native Memory Tracking] )機能を有効にします。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:36
 msgid "Enable NMT on the command line;"
-msgstr ""
+msgstr "コマンドラインでNMTを有効に設定;"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:38
 #, no-wrap
 msgid " -XX:NativeMemoryTracking=[off | summary | detail] <1>\n"
-msgstr ""
+msgstr " -XX:NativeMemoryTracking=[off | summary | detail] <1>\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:40
 msgid "NOTE: this feature will add cause an approximately 5-10% performance overhead"
-msgstr ""
+msgstr "留意事項: この機能は、約 5-10% のパフォーマンスオーバーヘッドを発生させます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:42
 msgid "It is then possible to use jcmd to dump a report of the native memory usage of the Hotspot JVM running your application;"
-msgstr ""
+msgstr "そして、jcmdを使ってアプリケーションを実行しているHotspot JVMのネイティブメモリー使用量のレポートをダンプすることができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:44
 #, no-wrap
 msgid " jcmd <pid> VM.native_memory [summary | detail | baseline | summary.diff | detail.diff | shutdown] [scale= KB | MB | GB]\n"
-msgstr ""
+msgstr "jcmd <pid> VM.native_memory [summary | detail | baseline | summary.diff | detail.diff | shutdown] [scale= KB | MB | GB] [scale= KB | MB | GB\n"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/performance-measure.adoc:45
 #, no-wrap
 msgid "Cloud Native Memory Limits"
-msgstr ""
+msgstr "クラウドネイティブのメモリー制限"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:49
 msgid "It is important to measure the whole memory to see the impact of a Cloud Native application.  It is particularly true of container environments which will kill a process based on its full RSS memory usage."
-msgstr ""
+msgstr "Cloud Nativeアプリケーションの影響を見るためには、メモリー全体を測定することが重要です。特にRSSメモリーの全使用量に基づいてプロセスを強制終了させてしまうことがあるコンテナー環境では特にそうです。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:53
 msgid "Likewise, don't fall into the trap of only measuring private memory which is what the process uses that is not shareable with other processes.  While private memory might be useful in a environment deploying many different applications (and thus sharing memory a lot), it is very misleading in environments like Kubernetes/OpenShift."
-msgstr ""
+msgstr "同様に、プロセスが使用している、他のプロセスと共有されないプライベートメモリーだけを測定するという罠にはまらないようにしましょう。プライベートメモリーは、多くの異なるアプリケーションをデプロイする環境(したがってメモリーを多く共有する)では有用かもしれませんが、Kubernetes/OpenShiftのような環境では非常に誤解を招く可能性があります。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/performance-measure.adoc:54
 #, no-wrap
 msgid "Platform Specific Memory Reporting"
-msgstr ""
+msgstr "プラットフォーム固有のメモリーレポート"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:57
 msgid "In order to not incur the performance overhead of running with NVM enabled, we measure the total RSS of an JVM application using tools specific to each platform."
-msgstr ""
+msgstr "NVMを有効にして実行することによるパフォーマンスオーバーヘッドを発生させないために、各プラットフォームに特化したツールを使用して、JVMアプリケーションの総RSSを測定します。"
 
 #. type: Labeled list
 #: upstream/_versions/1.11/guides/performance-measure.adoc:58
 #, no-wrap
 msgid "Linux"
-msgstr ""
+msgstr "Linux"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:61
 msgid "The linux https://linux.die.net/man/1/pmap[pmap] and https://linux.die.net/man/1/ps[ps] tools provide a report on the native memory map for a process"
-msgstr ""
+msgstr "Linux の link:https://linux.die.net/man/1/pmap[pmap] と link:https://linux.die.net/man/1/ps[ps] ツールはプロセスのネイティブメモリーマップのレポートを提供します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/performance-measure.adoc:65
@@ -204,7 +204,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:90
 msgid "Each Memory region that has been allocated for the process is listed;"
-msgstr ""
+msgstr "プロセスに割り当てられた各メモリー領域が一覧表示されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:92
@@ -214,47 +214,47 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:93
 msgid "Kbytes: Size (kilobytes) of virtual address space reserved for region"
-msgstr ""
+msgstr "Kbytes(キロバイト): リージョン用に予約された仮想アドレス空間のサイズ (キロバイト)"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:94
 #, no-wrap
 msgid "RSS:     Resident set size (kilobytes).  This is the measure of how much memory space is actually being used\n"
-msgstr ""
+msgstr "RSS: 常駐セットサイズ(キロバイト)。これは、実際に使用されているメモリー領域の量を示す指標です。\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:95
 #, no-wrap
 msgid "Dirty:   dirty pages (both shared and private) in kilobytes\n"
-msgstr ""
+msgstr "Dirty: ダーティなページ (共有およびプライベートの両方) をキロバイト単位で表示します。\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:96
 #, no-wrap
 msgid "Mode:    Access mode for memory region\n"
-msgstr ""
+msgstr "モード: メモリー領域のアクセスモード\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:97
 #, no-wrap
 msgid "Mapping: Includes application regions and Shared Object (.so) mappings for process\n"
-msgstr ""
+msgstr "マッピング: プロセス用のアプリケーション領域と共有オブジェクト(.so)のマッピングを含む\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:99
 msgid "The Total RSS (kB) line reports the total native memory the process is using."
-msgstr ""
+msgstr "Total RSS (kB)行は、プロセスが使用しているネイティブメモリーの合計を報告します。"
 
 #. type: Labeled list
 #: upstream/_versions/1.11/guides/performance-measure.adoc:100
 #, no-wrap
 msgid "macOS"
-msgstr ""
+msgstr "macOS"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:102
 msgid "On macOS, you can use `ps x -o pid,rss,command -p <PID>` which list the RSS for a given process in KB (1024 bytes)."
-msgstr ""
+msgstr "macOSでは、特定のプロセスのRSSをKB(1024バイト)単位で一覧表示する `ps x -o pid,rss,command -p <PID>` を使用することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/performance-measure.adoc:106
@@ -273,28 +273,28 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:112
 msgid "Which means IntelliJ IDEA consumes 281,8 MB of resident memory."
-msgstr ""
+msgstr "つまり、IntelliJ IDEAは281,8MBのRSSを消費していることになります。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/performance-measure.adoc:113
 #, no-wrap
 msgid "How do we measure startup time"
-msgstr ""
+msgstr "起動時間の測定方法"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:118
 msgid "Some frameworks use aggressive lazy initialization techniques.  It is important to measure the startup time to first request to most accurately reflect how long a framework needs to start.  Otherwise, you will miss the time the framework _actually_ takes to initialize."
-msgstr ""
+msgstr "フレームワークの中には、アグレッシブな遅延初期化技術を使用しているものがあります。フレームワークを開始するために必要な時間を最も正確に反映させるために、最初のリクエストまでの起動時間を測定することが重要です。そうしないと、フレームワークが _実際に_ 初期化にかかる時間を見逃してしまいます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:120
 msgid "Here is how we measure startup time in our tests."
-msgstr ""
+msgstr "ここでは、テストでの起動時間の測定方法を説明します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:122
 msgid "We create a sample application that logs timestamps for certain points in the application lifecycle."
-msgstr ""
+msgstr "アプリケーションのライフサイクルの特定のポイントのタイムスタンプをログに記録するサンプルアプリケーションを作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/performance-measure.adoc:127
@@ -337,7 +337,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:146
 msgid "We start looping in a shell, sending requests to the rest endpoint of the sample application we are testing."
-msgstr ""
+msgstr "私たちはシェル内でループを開始し、テストしているサンプルアプリケーションのRESTエンドポイントにリクエストを送信します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/performance-measure.adoc:150
@@ -348,7 +348,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:153
 msgid "In a separate terminal, we start the timing application that we are testing, printing the time the application starts"
-msgstr ""
+msgstr "別のターミナルで、テストしているタイミングアプリケーションを起動し、アプリケーションが起動した時刻を印刷します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/performance-measure.adoc:157
@@ -370,7 +370,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:166
 msgid "The difference between the final timestamp and the first timestamp is the total startup time for the application to serve the first request."
-msgstr ""
+msgstr "最終タイムスタンプと最初のタイムスタンプの差は、アプリケーションが最初のリクエストにサービスを提供するまでの総起動時間です。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/performance-measure.adoc:167
@@ -381,76 +381,76 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:170
 msgid "When Quarkus invokes GraalVM `native-image` it will apply some additional flags by default."
-msgstr ""
+msgstr "QuarkusがGraalVM `native-image` を起動すると、 デフォルトでいくつかの追加フラグが適用されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:172
 msgid "You might want to know about the following ones in case you're comparing performance properties with other builds."
-msgstr ""
+msgstr "他のビルドと性能特性を比較する場合には、以下のようなものを知っておいた方が良いでしょう。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/performance-measure.adoc:173
 #, no-wrap
 msgid "Disable fallback images"
-msgstr ""
+msgstr "フォールバックイメージの無効化"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:177
 msgid "Fallback native images are a feature of GraalVM to \"fall back\" to run your application in the normal JVM, should the compilation to native code fail for some reason."
-msgstr ""
+msgstr "フォールバックネイティブイメージは、何らかの理由でネイティブコードへのコンパイルに失敗した場合に、アプリケーションを通常のJVMで実行するために「フォールバック」するためのGraalVMの機能です。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:180
 msgid "Quarkus disables this feature by setting `-H:FallbackThreshold=0`: this will ensure you get a compilation failure rather risking to not notice that the application is unable to really run in native mode."
-msgstr ""
+msgstr "Quarkusは、 `-H:FallbackThreshold=0` を設定することでこの機能を無効にします。これにより、アプリケーションが本当にネイティブモードで実行できないことに気づかないリスクの代わりに、コンパイルに失敗するように出来ます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:182
 msgid "If you instead want to just run in Java mode, that's totally possible: just skip the native-image build and run it as a jar."
-msgstr ""
+msgstr "代わりに Java モードで実行したい場合は、ネイティブイメージのビルドをスキップして jar として実行することも可能です。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/performance-measure.adoc:183
 #, no-wrap
 msgid "Disable Isolates"
-msgstr ""
+msgstr "分離の無効化"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:186
 msgid "Isolates are a neat feature of GraalVM, but Quarkus isn't using them at this stage."
-msgstr ""
+msgstr "分離はGraalVMの優れた機能ですが、Quarkusは現段階では使用していません。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:188
 msgid "Disable via `-H:-SpawnIsolates`."
-msgstr ""
+msgstr "`-H:-SpawnIsolates` で無効化する。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/performance-measure.adoc:189
 #, no-wrap
 msgid "Disable auto-registration of all Service Loader implementations"
-msgstr ""
+msgstr "すべてのサービスローダー実装の自動登録の無効化"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:193
 msgid "Quarkus extensions can automatically pick the right services they need, while GraalVM's native-image defaults to include all services it's able to find on the classpath."
-msgstr ""
+msgstr "Quarkusのエクステンションでは、必要なサービスを自動的に選択することができますが、GraalVMのネイティブイメージのデフォルトでは、クラスパス上で見つけることができるすべてのサービスが含まれています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:195
 msgid "We prefer listing services explicitly as it produces better optimised binaries. Disable it as well by setting `-H:-UseServiceLoaderFeature`."
-msgstr ""
+msgstr "サービスを明示的にリストアップした方が最適化されたバイナリーが生成されるので好ましいです。 `-H:-UseServiceLoaderFeature` により、無効化することが可能です。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/performance-measure.adoc:196
 #, no-wrap
 msgid "Better default for Garbage Collection implementation"
-msgstr ""
+msgstr "ガベージコレクション実装のためのより良いデフォルト値"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:199
 msgid "The default in GraalVM seems meant to optimise for short lived processes."
-msgstr ""
+msgstr "GraalVMのデフォルト値は、短命なプロセスに最適化することを意図しているようです。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:202
@@ -458,13 +458,13 @@ msgstr ""
 msgid ""
 "Quarkus defaults to server applications, so we switch to a better default by setting\n"
 " `-H:InitialCollectionPolicy=com.oracle.svm.core.genscavenge.CollectionPolicy$BySpaceAndTime`.\n"
-msgstr ""
+msgstr "Quarkusのデフォルトはサーバーアプリケーションになっているので、 `-H:InitialCollectionPolicy=com.oracle.svm.core.genscavenge.CollectionPolicy$BySpaceAndTime` によってより良いデフォルト値に切り替えています。\n"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/performance-measure.adoc:203
 #, no-wrap
 msgid "Others ..."
-msgstr ""
+msgstr "その他..."
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:208
@@ -473,14 +473,14 @@ msgid ""
 "This section is provided as high level guidance, but can't presume to be comprehensive as some flags are controlled\n"
 " dynamically by the extensions, the platform you're building on, configuration details, your code and possibly\n"
 " a combination of any of these.\n"
-msgstr ""
+msgstr "このセクションは高レベルのガイダンスとして提供されていますが、フラグのいくつかはエクステンションや構築しているプラットフォーム、設定の詳細、あなたのコード、そしておそらくこれらの組み合わせによって動的に制御されるため、包括的なものとは考えられません。\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:211
 msgid "Generally speaking the ones listed here are those most likely to affect performance metrics, but in the right circumstances one could observe non negligible impact from the other flags too."
-msgstr ""
+msgstr "一般的に言えば、ここに挙げたものはパフォーマンス・メトリクスに影響を与える可能性が高いものですが、適切な状況下では、他のフラグからも無視できないほどの影響を受ける可能性があります。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/performance-measure.adoc:214
 msgid "If you're to investigate some differences in detail make sure to check what Quarkus is invoking exactly: when the build plugin is producing a native image, the full command lines are logged."
-msgstr ""
+msgstr "いくつかの差異を詳細に調査する場合は、Quarkusが呼び出しているものを正確にチェックしてください。ビルドプラグインがネイティブイメージを生成しているときには、コマンドライン全体がログに記録されます。"
