--- a/l10n/po/ja_JP/_guides/cassandra.adoc.po
+++ b/l10n/po/ja_JP/_guides/cassandra.adoc.po
@@ -932,7 +932,7 @@ msgstr "リアクティブなフロントエンドの作成"
 #. type: Plain text
 #: upstream/_guides/cassandra.adoc:538
 msgid "Now let's add a simple web page to interact with our `FruitReactiveResource`.  In the `src/main/resources/META-INF/resources` directory, add a `reactive-fruits.html` file with the content from this link:https://github.com/datastax/cassandra-quarkus/tree/master/quickstart/src/main/resources/META-INF/resources/reactive-fruits.html[reactive-fruits.html] file in it."
-msgstr "それでは、`FruitReactiveResource`を操作する簡単なWebページを追加してみましょう。  src/main/resources/META-INF/resources`ディレクトリに、このリンク:https://github.com/datastax/cassandra-quarkus/tree/master/quickstart/src/main/resources/META-INF/resources/reactive-fruits.html[reactive-fruits.html]ファイルの内容を含む、`reactive-fruits.html`ファイルを追加します。"
+msgstr "それでは、`FruitReactiveResource`を操作する簡単なWebページを追加してみましょう。  src/main/resources/META-INF/resources`ディレクトリに、この link:https://github.com/datastax/cassandra-quarkus/tree/master/quickstart/src/main/resources/META-INF/resources/reactive-fruits.html[reactive-fruits.html] ファイルの内容を含む、`reactive-fruits.html`ファイルを追加します。"
 
 #. type: Plain text
 #: upstream/_guides/cassandra.adoc:540
