--- a/l10n/po/ja_JP/_guides/cassandra.adoc.po
+++ b/l10n/po/ja_JP/_guides/cassandra.adoc.po
@@ -463,7 +463,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/cassandra.adoc:251
 msgid "The `list` and `add` operations are executed for the `storeId` \"acme\". This is the partition key of our data model. We can easily retrieve all rows from cassandra using that partition key.  They will be sorted by the clustering column. `FruitResource` is using `FruitService` which encapsulates the data access logic."
-msgstr "list`と`add`の操作は`storeId`の \"acme \"に対して実行されます。これは私たちのデータモデルのパーティション・キーです。このパーティション・キーを使って、Cassandraからすべての行を簡単に取り出すことができます。  それらはクラスタリングカラムでソートされます。FruitResource \"はデータアクセスロジックをカプセル化した \"FruitService \"を使用しています。"
+msgstr "`list`と`add`の操作は`storeId`の \"acme \"に対して実行されます。これは私たちのデータモデルのパーティション・キーです。このパーティション・キーを使って、Cassandraからすべての行を簡単に取り出すことができます。  それらはクラスタリングカラムでソートされます。FruitResource \"はデータアクセスロジックをカプセル化した \"FruitService \"を使用しています。"
 
 #. type: Plain text
 #: upstream/_guides/cassandra.adoc:257
