Apply translation memory

--- a/l10n/po/ja_JP/_includes/worldtour-code.html.po
+++ b/l10n/po/ja_JP/_includes/worldtour-code.html.po
@@ -20,7 +20,7 @@ msgstr ""
 #. type: Content of: <div><div><div><h3>
 #: upstream/_includes/worldtour-code.html:4
 msgid "Quickly Bootstrap Your Application"
-msgstr ""
+msgstr "アプリケーションのクイック起動"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/worldtour-code.html:5
