--- a/l10n/po/ja_JP/_versions/1.11/guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/hibernate-orm.adoc.po
@@ -1677,7 +1677,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:866
 #, no-wrap
 msgid "Configuring the application"
-msgstr ""
+msgstr "アプリケーションの設定"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:871
