--- a/l10n/po/ja_JP/_versions/1.11/guides/hibernate-search-orm-elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/hibernate-search-orm-elasticsearch.adoc.po
@@ -1033,7 +1033,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-search-orm-elasticsearch.adoc:542
 #, no-wrap
 msgid "Configuring the application"
-msgstr ""
+msgstr "アプリケーションの設定"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-search-orm-elasticsearch.adoc:545
