--- a/l10n/po/ja_JP/_versions/1.11/guides/kogito.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/kogito.adoc.po
@@ -524,18 +524,18 @@ msgstr ""
 #: upstream/_versions/1.11/guides/kogito.adoc:225
 #, no-wrap
 msgid "Running and Using the Application"
-msgstr ""
+msgstr "アプリケーションの実行と使用"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/kogito.adoc:227
 #, no-wrap
 msgid "Running in Developer Mode"
-msgstr ""
+msgstr "デベロッパーモードでの実行"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:230
 msgid "To run the microservice in dev mode, use `./mvnw clean compile quarkus:dev`."
-msgstr ""
+msgstr "マイクロサービスをdevモードで実行するには、 `./mvnw clean compile quarkus:dev` を使用します。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/kogito.adoc:231
@@ -546,12 +546,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:234
 msgid "When you're done playing with \"dev-mode\" you can run it as a standard Java application."
-msgstr ""
+msgstr "\"dev-mode\" で遊び終わったら、標準のJavaアプリケーションとして実行することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:236
 msgid "First compile it:"
-msgstr ""
+msgstr "まずコンパイルします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/kogito.adoc:240
@@ -574,22 +574,22 @@ msgstr ""
 #: upstream/_versions/1.11/guides/kogito.adoc:249
 #, no-wrap
 msgid "Running in Native Mode"
-msgstr ""
+msgstr "ネイティブモードでの実行"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:252
 msgid "This same demo can be compiled into native code: no modifications required."
-msgstr ""
+msgstr "同じデモをネイティブコードにコンパイルすることができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:256
 msgid "This implies that you no longer need to install a JVM on your production environment, as the runtime technology is included in the produced binary, and optimized to run with minimal resource overhead."
-msgstr ""
+msgstr "これは、生成されたバイナリーにランタイム技術が含まれており、最小限のリソースオーバーヘッドで実行できるように最適化されているため、本番環境にJVMをインストールする必要がないことを意味します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:259
 msgid "Compilation will take a bit longer, so this step is disabled by default; let's build again by enabling the `native` profile:"
-msgstr ""
+msgstr "コンパイルには少し時間がかかるので、このステップはデフォルトで無効になっています。 `native` プロファイルを有効にして再度ビルドしてみましょう。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/kogito.adoc:263
@@ -600,7 +600,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:266
 msgid "After getting a cup of coffee, you'll be able to run this binary directly:"
-msgstr ""
+msgstr "コーヒーを飲み終わると、このバイナリーは以下のように直接実行出来るようになります:"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/kogito.adoc:270
