--- a/l10n/po/ja_JP/_versions/1.11/guides/security-keycloak-authorization.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security-keycloak-authorization.adoc.po
@@ -84,7 +84,7 @@ msgstr "Apache Maven {maven-version}"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:32
 msgid "https://stedolan.github.io/jq/[jq tool]"
-msgstr ""
+msgstr "https://stedolan.github.io/jq/[jq tool]"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:33
@@ -120,12 +120,13 @@ msgstr "`/api/admin`"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:43
 msgid "These endpoints are protected and can only be accessed if a client is sending a bearer token along with the request, which must be valid (e.g.: signature, expiration and audience) and trusted by the microservice."
-msgstr ""
+msgstr "これらのエンドポイントは保護されており、クライアントがリクエストと一緒にベアラートークンを送信している場合にのみアクセスすることができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:46
+#, fuzzy
 msgid "The bearer token is issued by a Keycloak Server and represents the subject to which the token was issued for.  For being an OAuth 2.0 Authorization Server, the token also references the client acting on behalf of the user."
-msgstr ""
+msgstr "ベアラートークンは、Keycloakサーバーによって発行され、トークンが発行された対象を表します。OAuth 2.0 認可サーバーであるため、トークンはユーザーの代わりに動作するクライアントも参照します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:50
@@ -223,8 +224,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:107
+#, fuzzy
 msgid "Let's start by implementing the `/api/users/me` endpoint.  As you can see from the source code below it is just a regular JAX-RS resource:"
-msgstr ""
+msgstr "まずは `/api/users/me` エンドポイントを実装してみましょう。下のソースコードを見るとわかるように、これは通常の JAX-RS リソースです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:111
@@ -370,12 +372,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:176
 #, no-wrap
 msgid "Configuring the application"
-msgstr ""
+msgstr "アプリケーションの設定"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:179
 msgid "The OpenID Connect extension allows you to define the adapter configuration using the `application.properties` file which should be located at the `src/main/resources` directory."
-msgstr ""
+msgstr "OpenID Connect エクステンションを使用すると、`src/main/resources` ディレクトリーに配置される `application.properties` ファイルを使用してアダプター設定を定義することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:187
@@ -410,7 +412,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:197
 msgid "To start a Keycloak Server you can use Docker and just run the following command:"
-msgstr ""
+msgstr "Keycloak サーバーを起動するにはDockerを使用し、以下のコマンドを実行するだけです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:201
@@ -425,8 +427,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:207
+#, fuzzy
 msgid "Log in as the `admin` user to access the Keycloak Administration Console.  Username should be `admin` and password `admin`."
-msgstr ""
+msgstr "Keycloak 管理コンソールにアクセスするには、 `admin` ユーザーとしてログインしてください。ユーザー名は `admin` 、パスワードは `admin` です。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:210
@@ -437,18 +440,18 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:211
 #, no-wrap
 msgid "Running and Using the Application"
-msgstr ""
+msgstr "アプリケーションの実行と使用"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:213
 #, no-wrap
 msgid "Running in Developer Mode"
-msgstr ""
+msgstr "デベロッパーモードでの実行"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:216
 msgid "To run the microservice in dev mode, use `./mvnw clean compile quarkus:dev`."
-msgstr ""
+msgstr "マイクロサービスをdevモードで実行するには、 `./mvnw clean compile quarkus:dev` を使用します。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:217
@@ -459,12 +462,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:220
 msgid "When you're done playing with \"dev-mode\" you can run it as a standard Java application."
-msgstr ""
+msgstr "\"dev-mode\" で遊び終わったら、標準のJavaアプリケーションとして実行することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:222
 msgid "First compile it:"
-msgstr ""
+msgstr "まずコンパイルします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:226
@@ -487,22 +490,22 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:235
 #, no-wrap
 msgid "Running in Native Mode"
-msgstr ""
+msgstr "ネイティブモードでの実行"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:238
 msgid "This same demo can be compiled into native code: no modifications required."
-msgstr ""
+msgstr "同じデモをネイティブコードにコンパイルすることができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:240
 msgid "This implies that you no longer need to install a JVM on your production environment, as the runtime technology is included in the produced binary, and optimized to run with minimal resource overhead."
-msgstr ""
+msgstr "これは、生成されたバイナリーにランタイム技術が含まれており、最小限のリソースオーバーヘッドで実行できるように最適化されているため、本番環境にJVMをインストールする必要がないことを意味します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:242
 msgid "Compilation will take a bit longer, so this step is disabled by default; let's build again by enabling the `native` profile:"
-msgstr ""
+msgstr "コンパイルには少し時間がかかるので、このステップはデフォルトで無効になっています。 `native` プロファイルを有効にして再度ビルドしてみましょう。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:246
@@ -513,7 +516,7 @@ msgstr "./mvnw package -Pnative\n"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:249
 msgid "After getting a cup of coffee, you'll be able to run this binary directly:"
-msgstr ""
+msgstr "コーヒーを飲み終わると、このバイナリーは以下のように直接実行出来るようになります:"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:253
@@ -530,7 +533,7 @@ msgstr "アプリケーションのテスト"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:258
 msgid "The application is using bearer token authorization and the first thing to do is obtain an access token from the Keycloak Server in order to access the application resources:"
-msgstr ""
+msgstr "アプリケーションはベアラートークン認可を使用しており、まず最初に行うべきことは、アプリケーションのリソースにアクセスするためにKeycloak サーバーからアクセストークンを取得することです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:267
@@ -547,12 +550,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:270
 msgid "The example above obtains an access token for user `alice`."
-msgstr ""
+msgstr "上記の例では、ユーザー `alice` のアクセストークンを取得しています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:274
 msgid "Any user is allowed to access the `http://localhost:8080/api/users/me` endpoint which basically returns a JSON payload with details about the user."
-msgstr ""
+msgstr "どのユーザーでも `http://localhost:8080/api/users/me` エンドポイントで、基本的にはユーザーに関する詳細な情報を含む JSON ペイロードを返します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:280
@@ -580,7 +583,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:293
 msgid "In order to access the admin endpoint you should obtain a token for the `admin` user:"
-msgstr ""
+msgstr "admin エンドポイントにアクセスするには、 `admin` ユーザーのトークンを取得する必要があります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:302
@@ -703,12 +706,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:361
 msgid "https://openid.net/connect/[OpenID Connect]"
-msgstr ""
+msgstr "https://openid.net/connect/[OpenID Connect]"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:362
 msgid "https://tools.ietf.org/html/rfc7519[JSON Web Token]"
-msgstr ""
+msgstr "https://tools.ietf.org/html/rfc7519[JSON Web Token]"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:362
