--- a/l10n/po/ja_JP/_versions/1.11/guides/spring-cloud-config-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/spring-cloud-config-client.adoc.po
@@ -232,7 +232,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/spring-cloud-config-client.adoc:121
 #, no-wrap
 msgid "Configuring the application"
-msgstr ""
+msgstr "アプリケーションの設定"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/spring-cloud-config-client.adoc:124
