--- a/l10n/po/ja_JP/_versions/1.7/guides/security-openid-connect-multitenancy.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/security-openid-connect-multitenancy.adoc.po
@@ -79,7 +79,7 @@ msgstr "Apache Maven {maven-version}"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:28
 msgid "https://stedolan.github.io/jq/[jq tool]"
-msgstr ""
+msgstr "https://stedolan.github.io/jq/[jq tool]"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:29
@@ -152,7 +152,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:62
 msgid "If you already have your Quarkus project configured, you can add the `oidc` extension to your project by running the following command in your project base directory:"
-msgstr ""
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `oidc` エクステンションを追加することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:66
@@ -333,7 +333,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:154
 #, no-wrap
 msgid "Configuring the application"
-msgstr ""
+msgstr "アプリケーションの設定"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:162
@@ -422,7 +422,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:201
 msgid "To start a Keycloak Server you can use Docker and just run the following command:"
-msgstr ""
+msgstr "Keycloak サーバーを起動するにはDockerを使用し、以下のコマンドを実行するだけです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:205
@@ -433,12 +433,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:208
 msgid "You should be able to access your Keycloak Server at http://localhost:8180/auth[localhost:8180/auth]."
-msgstr ""
+msgstr "Keycloakサーバーには、 link:http://localhost:8180/auth[localhost:8180/auth] でアクセスできるはずです。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:210
 msgid "Log in as the `admin` user to access the Keycloak Administration Console. Username should be `admin` and password `admin`."
-msgstr ""
+msgstr "Keycloak 管理コンソールにアクセスするには、 `admin` ユーザーとしてログインしてください。ユーザー名は `admin` 、パスワードは `admin` です。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:212
@@ -464,18 +464,18 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:218
 #, no-wrap
 msgid "Running and Using the Application"
-msgstr ""
+msgstr "アプリケーションの実行と使用"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:220
 #, no-wrap
 msgid "Running in Developer Mode"
-msgstr ""
+msgstr "デベロッパーモードでの実行"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:223
 msgid "To run the microservice in dev mode, use `./mvnw clean compile quarkus:dev`."
-msgstr ""
+msgstr "マイクロサービスをdevモードで実行するには、 `./mvnw clean compile quarkus:dev` を使用します。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:224
@@ -486,12 +486,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:227
 msgid "When you're done playing with \"dev-mode\" you can run it as a standard Java application."
-msgstr ""
+msgstr "\"dev-mode\" で遊び終わったら、標準のJavaアプリケーションとして実行することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:229
 msgid "First compile it:"
-msgstr ""
+msgstr "まずコンパイルします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:233
@@ -514,22 +514,22 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:242
 #, no-wrap
 msgid "Running in Native Mode"
-msgstr ""
+msgstr "ネイティブモードでの実行"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:245
 msgid "This same demo can be compiled into native code: no modifications required."
-msgstr ""
+msgstr "同じデモをネイティブコードにコンパイルすることができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:249
 msgid "This implies that you no longer need to install a JVM on your production environment, as the runtime technology is included in the produced binary, and optimized to run with minimal resource overhead."
-msgstr ""
+msgstr "これは、生成されたバイナリーにランタイム技術が含まれており、最小限のリソースオーバーヘッドで実行できるように最適化されているため、本番環境にJVMをインストールする必要がないことを意味します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:252
 msgid "Compilation will take a bit longer, so this step is disabled by default; let's build again by enabling the `native` profile:"
-msgstr ""
+msgstr "コンパイルには少し時間がかかるので、このステップはデフォルトで無効になっています。 `native` プロファイルを有効にして再度ビルドしてみましょう。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:256
@@ -540,7 +540,7 @@ msgstr "./mvnw package -Pnative\n"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:259
 msgid "After getting a cup of coffee, you'll be able to run this binary directly:"
-msgstr ""
+msgstr "コーヒーを飲み終わると、このバイナリーは以下のように直接実行出来るようになります:"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:263
@@ -758,12 +758,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:361
 msgid "https://openid.net/connect/[OpenID Connect]"
-msgstr ""
+msgstr "https://openid.net/connect/[OpenID Connect]"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:362
 msgid "https://tools.ietf.org/html/rfc7519[JSON Web Token]"
-msgstr ""
+msgstr "https://tools.ietf.org/html/rfc7519[JSON Web Token]"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-multitenancy.adoc:363
