--- a/l10n/po/ja_JP/_versions/1.7/guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/security-openid-connect-web-authentication.adoc.po
@@ -43,7 +43,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:18
 msgid "Please read the link:security-openid-connect-multitenancy[Using OpenID Connect Multi-Tenancy] guide how to support multiple tenants."
-msgstr ""
+msgstr "マルチテナントへの対応方法については、 link:security-openid-connect-multitenancy[Using OpenID Connect Multi-Tenancy] ガイドをお読みください。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:19
@@ -79,7 +79,7 @@ msgstr "Apache Maven {maven-version}"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:28
 msgid "https://stedolan.github.io/jq/[jq tool]"
-msgstr ""
+msgstr "https://stedolan.github.io/jq/[jq tool]"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:29
@@ -152,7 +152,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:62
 msgid "If you already have your Quarkus project configured, you can add the `oidc` extension to your project by running the following command in your project base directory:"
-msgstr ""
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `oidc` エクステンションを追加することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:66
@@ -179,7 +179,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:78
 #, no-wrap
 msgid "Configuring the application"
-msgstr ""
+msgstr "アプリケーションの設定"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:81
@@ -190,7 +190,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:82
 #, no-wrap
 msgid "Configuring using the application.properties file"
-msgstr ""
+msgstr "application.propertiesファイルを使った設定"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:91
@@ -232,7 +232,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:105
 msgid "To start a Keycloak Server you can use Docker and just run the following command:"
-msgstr ""
+msgstr "Keycloak サーバーを起動するにはDockerを使用し、以下のコマンドを実行するだけです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:109
@@ -243,12 +243,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:112
 msgid "You should be able to access your Keycloak Server at http://localhost:8180/auth[localhost:8180/auth]."
-msgstr ""
+msgstr "Keycloakサーバーには、 link:http://localhost:8180/auth[localhost:8180/auth] でアクセスできるはずです。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:114
 msgid "Log in as the `admin` user to access the Keycloak Administration Console. Username should be `admin` and password `admin`."
-msgstr ""
+msgstr "Keycloak 管理コンソールにアクセスするには、 `admin` ユーザーとしてログインしてください。ユーザー名は `admin` 、パスワードは `admin` です。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:116
@@ -259,18 +259,18 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:117
 #, no-wrap
 msgid "Running and Using the Application"
-msgstr ""
+msgstr "アプリケーションの実行と使用"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:119
 #, no-wrap
 msgid "Running in Developer Mode"
-msgstr ""
+msgstr "デベロッパーモードでの実行"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:122
 msgid "To run the microservice in dev mode, use `./mvnw clean compile quarkus:dev`."
-msgstr ""
+msgstr "マイクロサービスをdevモードで実行するには、 `./mvnw clean compile quarkus:dev` を使用します。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:123
@@ -281,12 +281,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:126
 msgid "When you're done playing with \"dev-mode\" you can run it as a standard Java application."
-msgstr ""
+msgstr "\"dev-mode\" で遊び終わったら、標準のJavaアプリケーションとして実行することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:128
 msgid "First compile it:"
-msgstr ""
+msgstr "まずコンパイルします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:132
@@ -309,22 +309,22 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:141
 #, no-wrap
 msgid "Running in Native Mode"
-msgstr ""
+msgstr "ネイティブモードでの実行"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:144
 msgid "This same demo can be compiled into native code: no modifications required."
-msgstr ""
+msgstr "同じデモをネイティブコードにコンパイルすることができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:148
 msgid "This implies that you no longer need to install a JVM on your production environment, as the runtime technology is included in the produced binary, and optimized to run with minimal resource overhead."
-msgstr ""
+msgstr "これは、生成されたバイナリーにランタイム技術が含まれており、最小限のリソースオーバーヘッドで実行できるように最適化されているため、本番環境にJVMをインストールする必要がないことを意味します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:151
 msgid "Compilation will take a bit longer, so this step is disabled by default; let's build again by enabling the `native` profile:"
-msgstr ""
+msgstr "コンパイルには少し時間がかかるので、このステップはデフォルトで無効になっています。 `native` プロファイルを有効にして再度ビルドしてみましょう。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:155
@@ -335,7 +335,7 @@ msgstr "./mvnw package -Pnative\n"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:158
 msgid "After getting a cup of coffee, you'll be able to run this binary directly:"
-msgstr ""
+msgstr "コーヒーを飲み終わると、このバイナリーは以下のように直接実行出来るようになります:"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:162
@@ -575,7 +575,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:271
 #, no-wrap
 msgid "User Info"
-msgstr ""
+msgstr "ユーザー情報"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:275
@@ -586,7 +586,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:276
 #, no-wrap
 msgid "Token Claims And SecurityIdentity Roles"
-msgstr ""
+msgstr "トークンクレームとセキュリティーアイデンティティロール"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:279
@@ -612,7 +612,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:286
 #, no-wrap
 msgid "Single Page Applications"
-msgstr ""
+msgstr "シングルページアプリケーション"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:289
@@ -671,12 +671,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:318
 msgid "https://openid.net/connect/[OpenID Connect]"
-msgstr ""
+msgstr "https://openid.net/connect/[OpenID Connect]"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:319
 msgid "https://tools.ietf.org/html/rfc7519[JSON Web Token]"
-msgstr ""
+msgstr "https://tools.ietf.org/html/rfc7519[JSON Web Token]"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-openid-connect-web-authentication.adoc:319
