--- a/l10n/po/ja_JP/_versions/1.11/guides/consul-config.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/consul-config.adoc.po
@@ -254,7 +254,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/consul-config.adoc:132
 #, no-wrap
 msgid "Configuring the application"
-msgstr ""
+msgstr "アプリケーションの設定"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/consul-config.adoc:135
