--- a/l10n/po/ja_JP/_versions/1.11/guides/websockets.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/websockets.adoc.po
@@ -28,7 +28,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:12
 msgid "This guide explains how your Quarkus application can utilize web sockets to create interactive web applications.  Because it's the _canonical_ web socket application, we are going to create a simple chat application."
-msgstr ""
+msgstr "このガイドでは、QuarkusアプリケーションがWebSocketを利用してインタラクティブなウェブアプリケーションを作成する方法を説明します。 _定型的な_ WebSocketアプリケーションなので、簡単なチャットアプリケーションを作成します。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/websockets.adoc:13
@@ -75,7 +75,7 @@ msgstr "このガイドでは、WebSocketを使用して、接続されている
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:29
 msgid "image:websocket-guide-architecture.png[alt=Architecture]"
-msgstr ""
+msgstr "image:websocket-guide-architecture.png[alt=Architecture]"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/websockets.adoc:30
@@ -95,7 +95,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:38
 msgid "The solution is located in the `websockets-quickstart` {quickstarts-tree-url}/websockets-quickstart[directory]."
-msgstr ""
+msgstr "ソリューションは `websockets-quickstart` {quickstarts-tree-url}/websockets-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/websockets.adoc:39
@@ -123,12 +123,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:54
 msgid "This command generates the Maven project (without any classes) and import the `undertow-websockets` extension."
-msgstr ""
+msgstr "このコマンドは、Mavenプロジェクト(クラスなし)を生成し、 `undertow-websockets` エクステンションをインポートします。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:57
 msgid "If you already have your Quarkus project configured, you can add the `undertow-websockets` extension to your project by running the following command in your project base directory:"
-msgstr ""
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `undertow-websockets` エクステンションを追加することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/websockets.adoc:61
@@ -155,12 +155,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/websockets.adoc:73
 #, no-wrap
 msgid "Handling web sockets"
-msgstr ""
+msgstr "WebSocketの取り扱い"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:78
 msgid "Our application contains a single class that handles the web sockets.  Create the `org.acme.websockets.ChatSocket` class in the `src/main/java` directory.  Copy the following content into the created file:"
-msgstr ""
+msgstr "このアプリケーションには、Web ソケットを処理するクラスが一つ含まれます。 `src/main/java` ディレクトリーに `org.acme.websockets.ChatSocket` クラスを作成します。作成したファイルに以下の内容をコピーします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/websockets.adoc:82
@@ -279,18 +279,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:138
 msgid "Stores the currently opened web sockets"
-msgstr ""
+msgstr "現在開いているWebSocketを格納します。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/websockets.adoc:139
 #, no-wrap
 msgid "A slick web frontend"
-msgstr ""
+msgstr "洗練されたWebフロントエンド"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:144
 msgid "All chat applications need a _nice_ UI, well, this one may not be that nice, but does the work.  Quarkus automatically serves static resources contained in the `META-INF/resources` directory.  Create the `src/main/resources/META-INF/resources` directory and copy this {quickstarts-blob-url}/websockets-quickstart/src/main/resources/META-INF/resources/index.html[index.html] file in it."
-msgstr ""
+msgstr "すべてのチャットアプリケーションには _素敵な_ UIが必要です。Quarkusは、 `META-INF/resources` ディレクトリーに含まれる静的リソースを自動的に提供します。 `src/main/resources/META-INF/resources` ディレクトリーを作成し、この {quickstarts-blob-url}/websockets-quickstart/src/main/resources/META-INF/resources/index.html[index.html] ファイルをコピーします。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/websockets.adoc:145
@@ -312,17 +312,17 @@ msgstr "./mvnw compile quarkus:dev\n"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:155
 msgid "Then open your 2 browser windows to http://localhost:8080/:"
-msgstr ""
+msgstr "そして、ブラウザウィンドウを2つ開いて、 http://localhost:8080/ に移動します:"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:157
 msgid "Enter a name in the top text area (use 2 different names)."
-msgstr ""
+msgstr "上部のテキストエリアに名前を入力します(2種類の名前を使用します)。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:158
 msgid "Click on connect"
-msgstr ""
+msgstr "connectをクリック"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:159
@@ -332,7 +332,7 @@ msgstr "メッセージの送受信"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:161
 msgid "image:websocket-guide-screenshot.png[alt=Application]"
-msgstr ""
+msgstr "image:websocket-guide-screenshot.png[alt=Application]"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:164
@@ -342,7 +342,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:166
 msgid "You can also test your web socket applications using the approach detailed {quickstarts-blob-url}/websockets-quickstart/src/test/java/org/acme/websockets/ChatTest.java[here]."
-msgstr ""
+msgstr "また、{quickstarts-blob-url}/websockets-quickstart/src/test/java/org/acme/websockets/ChatTest.java[こちら]で詳細に解説された手法を使用して、Webソケットアプリケーションをテストすることもできます。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/websockets.adoc:167
@@ -353,17 +353,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:170
 msgid "Quarkus also contains a WebSocket client. You can call `ContainerProvider.getWebSocketContainer().connectToServer` to create a websocket connection."
-msgstr ""
+msgstr "Quarkusには、WebSocketクライアントも含まれています。 `ContainerProvider.getWebSocketContainer().connectToServer` を呼び出して、Websocket接続を作成することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:174
 msgid "When you connect to the server you can either pass in the Class of the annotated client endpoint you want to use, or an instance of `javax.websocket.Endpoint`. If you are using the annotated endpoint then you can use the exact same annotations as you can on the server, except it must be annotated with `@ClientEndpoint` instead of `@ServerEndpoint`."
-msgstr ""
+msgstr "サーバーに接続する際には、使用するアノテーション付きクライアント・エンドポイントの Class で渡すか、 `javax.websocket.Endpoint` のインスタンスで渡すことができます。アノテーション付きエンドポイントを使用している場合は、サーバー上で使用できるのとまったく同じアノテーションを使用できますが、アノテーションは `@ServerEndpoint` ではなく `@ClientEndpoint` でなければなりません。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:176
 msgid "The example below shows the client being used to test the chat endpoint above."
-msgstr ""
+msgstr "以下の例は、上記のチャットエンドポイントをテストするために使用されるクライアントを示しています。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/websockets.adoc:184
@@ -479,9 +479,9 @@ msgstr ""
 #: upstream/_versions/1.11/guides/websockets.adoc:237
 #, no-wrap
 msgid "More WebSocket Information"
-msgstr ""
+msgstr "その他のWebSocket情報"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:240
 msgid "The Quarkus WebSocket implementation is an implementation of link:https://eclipse-ee4j.github.io/websocket-api/[Jakarta Websockets]."
-msgstr ""
+msgstr "Quarkus WebSocketの実装は、 link:https://eclipse-ee4j.github.io/websocket-api/[Jakarta Websocket] の実装です。"
