--- a/l10n/po/ja_JP/_versions/1.7/guides/websockets.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/websockets.adoc.po
@@ -28,7 +28,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/websockets.adoc:12
 msgid "This guide explains how your Quarkus application can utilize web sockets to create interactive web applications.  Because it's the _canonical_ web socket application, we are going to create a simple chat application."
-msgstr ""
+msgstr "このガイドでは、QuarkusアプリケーションがWebSocketを利用してインタラクティブなウェブアプリケーションを作成する方法を説明します。 _定型的な_ WebSocketアプリケーションなので、簡単なチャットアプリケーションを作成します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/websockets.adoc:13
@@ -75,7 +75,7 @@ msgstr "このガイドでは、WebSocketを使用して、接続されている
 #. type: Plain text
 #: upstream/_versions/1.7/guides/websockets.adoc:29
 msgid "image:websocket-guide-architecture.png[alt=Architecture]"
-msgstr ""
+msgstr "image:websocket-guide-architecture.png[alt=Architecture]"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/websockets.adoc:30
@@ -95,7 +95,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_versions/1.7/guides/websockets.adoc:38
 msgid "The solution is located in the `websockets-quickstart` {quickstarts-tree-url}/websockets-quickstart[directory]."
-msgstr ""
+msgstr "ソリューションは `websockets-quickstart` {quickstarts-tree-url}/websockets-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/websockets.adoc:39
@@ -122,12 +122,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/websockets.adoc:53
 msgid "This command generates the Maven project (without any classes) and import the `undertow-websockets` extension."
-msgstr ""
+msgstr "このコマンドは、Mavenプロジェクト(クラスなし)を生成し、 `undertow-websockets` エクステンションをインポートします。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/websockets.adoc:56
 msgid "If you already have your Quarkus project configured, you can add the `undertow-websockets` extension to your project by running the following command in your project base directory:"
-msgstr ""
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `undertow-websockets` エクステンションを追加することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/websockets.adoc:60
@@ -154,12 +154,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/websockets.adoc:72
 #, no-wrap
 msgid "Handling web sockets"
-msgstr ""
+msgstr "WebSocketの取り扱い"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/websockets.adoc:77
 msgid "Our application contains a single class that handles the web sockets.  Create the `org.acme.websockets.ChatSocket` class in the `src/main/java` directory.  Copy the following content into the created file:"
-msgstr ""
+msgstr "このアプリケーションには、Web ソケットを処理するクラスが一つ含まれます。 `src/main/java` ディレクトリーに `org.acme.websockets.ChatSocket` クラスを作成します。作成したファイルに以下の内容をコピーします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/websockets.adoc:81
@@ -276,18 +276,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/websockets.adoc:137
 msgid "Stores the currently opened web sockets"
-msgstr ""
+msgstr "現在開いているWebSocketを格納します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/websockets.adoc:138
 #, no-wrap
 msgid "A slick web frontend"
-msgstr ""
+msgstr "洗練されたWebフロントエンド"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/websockets.adoc:143
 msgid "All chat applications need a _nice_ UI, well, this one may not be that nice, but does the work.  Quarkus automatically serves static resources contained in the `META-INF/resources` directory.  Create the `src/main/resources/META-INF/resources` directory and copy this {quickstarts-blob-url}/websockets-quickstart/src/main/resources/META-INF/resources/index.html[index.html] file in it."
-msgstr ""
+msgstr "すべてのチャットアプリケーションには _素敵な_ UIが必要です。Quarkusは、 `META-INF/resources` ディレクトリーに含まれる静的リソースを自動的に提供します。 `src/main/resources/META-INF/resources` ディレクトリーを作成し、この {quickstarts-blob-url}/websockets-quickstart/src/main/resources/META-INF/resources/index.html[index.html] ファイルをコピーします。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/websockets.adoc:144
@@ -315,17 +315,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/websockets.adoc:153
 msgid "Then open your 2 browser windows to http://localhost:8080/:"
-msgstr ""
+msgstr "そして、ブラウザウィンドウを2つ開いて、 http://localhost:8080/ に移動します:"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/websockets.adoc:155
 msgid "Enter a name in the top text area (use 2 different names)."
-msgstr ""
+msgstr "上部のテキストエリアに名前を入力します(2種類の名前を使用します)。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/websockets.adoc:156
 msgid "Click on connect"
-msgstr ""
+msgstr "connectをクリック"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/websockets.adoc:157
@@ -335,7 +335,7 @@ msgstr "メッセージの送受信"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/websockets.adoc:159
 msgid "image:websocket-guide-screenshot.png[alt=Application]"
-msgstr ""
+msgstr "image:websocket-guide-screenshot.png[alt=Application]"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/websockets.adoc:162
@@ -345,4 +345,4 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/websockets.adoc:163
 msgid "You can also test your web socket applications using the approach detailed {quickstarts-blob-url}/websockets-quickstart/src/test/java/org/acme/websockets/ChatTest.java[here]."
-msgstr ""
+msgstr "また、{quickstarts-blob-url}/websockets-quickstart/src/test/java/org/acme/websockets/ChatTest.java[こちら]で詳細に解説された手法を使用して、Webソケットアプリケーションをテストすることもできます。"
