--- a/l10n/po/ja_JP/_guides/index2.adoc.po
+++ b/l10n/po/ja_JP/_guides/index2.adoc.po
@@ -3,24 +3,24 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:07+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-24 22:50+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Title =
 #: upstream/_guides/index2.adoc:3
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "{project-name}"
-msgstr "プロジェクト名"
+msgstr "{project-name}"
 
 #. type: Title ==
 #: upstream/_guides/index2.adoc:7
@@ -30,25 +30,21 @@ msgstr "はじめに"
 
 #. type: Plain text
 #: upstream/_guides/index2.adoc:10
-#, fuzzy
 msgid "link:getting-started.html[Getting Started]"
 msgstr "link:getting-started.html[はじめに]"
 
 #. type: Plain text
 #: upstream/_guides/index2.adoc:11
-#, fuzzy
 msgid "link:building-native-image.html[Building Native Image]"
 msgstr "link:building-native-image.html[ネイティブイメージの構築]"
 
 #. type: Plain text
 #: upstream/_guides/index2.adoc:12
-#, fuzzy
 msgid "link:deploying-to-kubernetes.html[Deploy Application on Kubernetes]"
 msgstr "link:deploying-to-kubernetes.html[Kubernetes上にアプリケーションをデプロイする]"
 
 #. type: Plain text
 #: upstream/_guides/index2.adoc:13
-#, fuzzy
 msgid "link:getting-started-knative.html[Deploy as Knative Application on Kubernetes]"
 msgstr "link:getting-started-knative.html[Kubernetes上でKnativeアプリケーションとしてデプロイする]"
 
@@ -60,63 +56,54 @@ msgstr "link:ide-configuration.html[プロジェクトの足場とIDE]"
 
 #. type: Title ==
 #: upstream/_guides/index2.adoc:15
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Other guides"
 msgstr "その他のガイド"
 
 #. type: Plain text
 #: upstream/_guides/index2.adoc:18
-#, fuzzy
 msgid "link:config.html[Configuring Your Application]"
 msgstr "link:config.html[アプリケーションの設定]"
 
 #. type: Plain text
 #: upstream/_guides/index2.adoc:19
-#, fuzzy
 msgid "link:logging.html[Configuring Logging]"
 msgstr "link:logging.html[ロギングの設定]"
 
 #. type: Plain text
 #: upstream/_guides/index2.adoc:20
-#, fuzzy
 msgid "link:lifecycle.html[Application Initialization and Termination]"
 msgstr "link:lifecycle.html[アプリケーションの初期化と終了]"
 
 #. type: Plain text
 #: upstream/_guides/index2.adoc:21
-#, fuzzy
 msgid "link:rest-json.html[Writing JSON REST Services]"
-msgstr "link:rest-json.html[JSON RESTサービスの記述]"
+msgstr "link:rest-json.html[JSON RESTサービスの作成]"
 
 #. type: Plain text
 #: upstream/_guides/index2.adoc:22
-#, fuzzy
 msgid "link:scheduler.html[Schedule Periodic Tasks]"
-msgstr "link:scheduler.html[定期的なタスクのスケジュール]"
+msgstr "link:scheduler.html[定期的なタスクのスケジューリング]"
 
 #. type: Plain text
 #: upstream/_guides/index2.adoc:23
-#, fuzzy
 msgid "link:websockets.html[Using Websockets]"
-msgstr "link:websockets.html[ウェブソケットの使用]"
+msgstr "link:websockets.html[WebSocketの使用]"
 
 #. type: Plain text
 #: upstream/_guides/index2.adoc:24
-#, fuzzy
 msgid "link:validation.html[Input Validation And REST Services]"
-msgstr "link:validation.html[入力検証とRESTサービス]"
+msgstr "link:validation.html[入力バリデーションとRESTサービス]"
 
 #. type: Plain text
 #: upstream/_guides/index2.adoc:25
-#, fuzzy
 msgid "link:transaction.html[Using Transactions]"
 msgstr "link:transaction.html[トランザクションの利用]"
 
 #. type: Plain text
 #: upstream/_guides/index2.adoc:26
-#, fuzzy
 msgid "link:hibernate-orm.html[Using Hibernate ORM]"
-msgstr "link:hibernate-orm.html[Hibernate ORMを使う]"
+msgstr "link:hibernate-orm.html[Hibernate ORMの使用]"
 
 #. type: Plain text
 #: upstream/_guides/index2.adoc:27
